syntax = "proto3";

option csharp_namespace = "Shared.Protos";

import "google/protobuf/timestamp.proto";

package file_storing;

service FileStoring {
  rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);
  rpc GetFile (GetFileRequest) returns (GetFileResponse);
  rpc GetAllFiles (GetAllFilesRequest) returns (GetAllFilesResponse);
}

message UploadFileRequest {
  string file_name = 1;
  bytes content = 2;
}

message UploadFileResponse {
  string file_id = 1;
  string file_name = 2;
  string location = 3;
  string file_hash = 4;
}

message GetFileRequest {
  string file_id = 1;
}

message GetFileResponse {
  string file_id = 1;
  string file_name = 2;
  bytes content = 3;
  string file_hash = 4;
}

message GetAllFilesRequest {
}

message GetAllFilesResponse {
  repeated FileInfo files = 1;
}

message FileInfo {
  string file_id = 1;
  string file_name = 2;
  google.protobuf.Timestamp upload_date = 3;
  string file_hash = 4;
} 